* Move the profile in SAR/data (erikos)

76

* Added OLPC root CA support (marco, erikos)

75

* fix for fn+space (erikos)
* #4909 do not resume source with write (erikos)
* #4909 do not resume downloaded files (erikos)

74

* change the LIBRARY_PATH to point to 
  /usr/share/library-common/index.html (erikos)

73

* #4909: added a dbus call to open the source data by the journal (marco)
* #4889: use the window's fullscreen method to get to fullscreen mode,
this does not mess up the state the window manager has (erikos)
* #4870: Add onStatusChange method to Download. (tomeu)
* #4904: Save downloads to the instance dir, not tmp. (tomeu)

72

* Save the page source with mime type text/html (erikos)

71

* Added zoom support with keybindings (erikos)
* Added a view toolbar for fullscreen/tray/zoom (erikos)
* Make outline of the session bookmarks smaller (erikos)
* Use favorite icon for session bookmark and call it Bookmark #3741 (erikos)

70

* Moved the handling from hide/show of the tray to activity window (erikos)

69

* Remove download object when download is canceled when downloaded already 
as well (erikos)
* Make use of the tray support in sugar activity window (erikos)

68

* Adopt 'go' icons (marco)

67

* Use ctrl+t for tray visibility, this should move to sugar-graphics-window (erikos)
* Fix the case where no activity can be associated with the downloaded file (erikos)
* Changed icon for stop button, place alert on top (erikos)

66

* Adapt to sugar API change (marco)

65

* Removed hack to set the right service name for sharing (erikos)
* Removed the clipboard part from the download manager and added alerts (erikos)

64

63

* Fix crash on startup. (marco)
* #3552: Cancel a donwload when the related journal entry is deleted. (tomeu)

62

* #2910 Open popups in the current window (marco)
* Add agent-stylesheet.css and support for blocking flash. (tomeu)
* Add support for agent and user stylesheets. (tomeu)

61
